@@ -2,12 +2,12 @@
 # this repository contains the full copyright notices and license terms.
 
 from .misc import (
-    file_open, get_smtp_server, memoize, reduce_ids, reduce_domain,
+    file_open, get_smtp_server, reduce_ids, reduce_domain,
     grouped_slice, is_instance_method, resolve, strip_wildcard,
     lstrip_wildcard, rstrip_wildcard, slugify)
 from .decimal_ import decistmt
 
-__all__ = ['file_open', 'get_smtp_server', 'memoize', 'reduce_ids',
+__all__ = ['file_open', 'get_smtp_server', 'reduce_ids',
     'reduce_domain', 'grouped_slice', 'is_instance_method', 'resolve',
     'strip_wildcard', 'lstrip_wildcard', 'rstrip_wildcard', 'slugify',
     'decistmt', 'ClassProperty', 'cursor_dict']
