@@ -90,69 +90,6 @@ def get_smtp_server():
     return get_smtp_server()
 
 
-def memoize(maxsize):
-    """
-    Decorator to 'memoize' a function - caching its results with a
-    near LRU implementation.
-
-    The cache keeps a list of keys logicaly separated in 4 segment :
-
-    segment 1 | ...        | segment4
-    [k,k,k,k,k,k,k, .. ,k,k,k,k,k,k,k]
-
-    For each segment there is a pointer that loops on it.  When a key
-    is accessed from the cache it is promoted to the first segment (at
-    the pointer place of segment one), the key under the pointer is
-    moved to the next segment, the pointer is then incremented and so
-    on. A key that is removed from the last segment is removed from
-    the cache.
-
-    :param: maxsize the size of the cache (must be greater than or
-    equal to 4)
-    """
-    assert maxsize >= 4, "Memoize cannot work if maxsize is less than 4"
-
-    def wrap(fct):
-        cache = {}
-        keys = [None for i in range(maxsize)]
-        seg_size = maxsize // 4
-
-        pointers = [i * seg_size for i in range(4)]
-        max_pointers = [(i + 1) * seg_size for i in range(3)] + [maxsize]
-
-        def wrapper(*args):
-            key = repr(args)
-            res = cache.get(key)
-            if res:
-                pos, res = res
-                keys[pos] = None
-            else:
-                res = fct(*args)
-
-            value = res
-            for segment, pointer in enumerate(pointers):
-                newkey = keys[pointer]
-                keys[pointer] = key
-                cache[key] = (pointer, value)
-
-                pointers[segment] = pointer + 1
-                if pointers[segment] == max_pointers[segment]:
-                    pointers[segment] = segment * seg_size
-
-                if newkey is None:
-                    break
-                segment, value = cache.pop(newkey)
-                key = newkey
-
-            return res
-
-        wrapper.__doc__ = fct.__doc__
-        wrapper.__name__ = fct.__name__
-
-        return wrapper
-    return wrap
-
-
 def reduce_ids(field, ids):
     '''
     Return a small SQL expression for the list of ids and the sql column
