@@ -1,3 +1,4 @@
+* Replace memoize with functools.lru_cache
 * Add support for Python 3.8
 * Set all fields readonly for inactive record
 * Enable check_access context when checking wizard access (issue9108)
